Feat 29 - Moved side menu transition animation. speeded up fade in-out animation

--- a/src/app/components/as-main/as-main.component.html
+++ b/src/app/components/as-main/as-main.component.html
@@ -3,7 +3,7 @@
   <as-tours-list></as-tours-list>
   <ng-container *ngIf="isMenuOpen">
     <as-side-modal [side]="sides.LEFT">
-      <as-menu (OnClose)="onToggle()"></as-menu>
+      <as-menu (OnClose)="onToggle()" [@slideInOut]></as-menu>
     </as-side-modal>
   </ng-container>
 </section>
