--- a/src/app/components/as-menu/as-menu.component.html
+++ b/src/app/components/as-menu/as-menu.component.html
@@ -1,4 +1,4 @@
-<section class="wrapper" [@slideInOut]>
+<section class="wrapper">
   <as-header [Color]="colors.DARK" (OnClose)="onClose()"></as-header>
   <section class="body">
     <div class="action-container">
