--- a/src/app/components/sections/as-email/as-email-form/styles/as-email-form-heliotrope.component.scss
+++ b/src/app/components/sections/as-email/as-email-form/styles/as-email-form-heliotrope.component.scss
@@ -2,4 +2,10 @@
 
 .wrapper.heliotrope {
   background-color: $color_plasma_trail_approx;
+
+  .privacy-disclaimer {
+    color: $black;
+    border-color: $color_heliotrope_approx;
+    background-color: $color_glicine_approx;
+  }
 }
