--- a/src/app/components/as-menu-item/styles/as-menu-item.component.scss
+++ b/src/app/components/as-menu-item/styles/as-menu-item.component.scss
@@ -1,10 +1,15 @@
+@import '../../../../styles/built-in-tags.scss';
 @import '../../../../styles/palette.scss';
 
 :host {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .wrapper {
-  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
@@ -74,6 +79,8 @@
     svg {
       .circles-group {
         .circle {
+          cursor: pointer;
+
           as-info-svg {
           }
 
