--- a/src/app/components/modals/as-side-modal/styles/as-side-modal.component.scss
+++ b/src/app/components/modals/as-side-modal/styles/as-side-modal.component.scss
@@ -12,24 +12,13 @@
   top: 0;
   left: 0;
   display: flex;
-  justify-content: center;
   background-color: rgb(0 0 0 / 50%);
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
   ::ng-deep {
     &>:first-child {
       display: flex;
-      border: 1px solid $dark;
-
-      &.right {
-        align-items: center;
-        justify-content: right;
-      }
-      &.left {
-        align-items: center;
-        justify-content: right;
-      }
     }
   }
 }
