--- a/src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
+++ b/src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
@@ -16,20 +16,27 @@
   align-items: center;
   justify-content: center;
   padding: 4% 2%;
+  gap: 5%;
+
+  .privacy-disclaimer {
+    padding: 3%;
+    border-width: 1px;
+    border-style: solid;
+  }
 
   form {
     flex: 1;
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 4%;
+    gap: 7%;
     overflow-y: auto;
 
     label {
       flex: 1;
       display: flex;
       flex-direction: column;
-      gap: .2%;
+      gap: 10%;
 
       span {
         font-weight: bold;
