--- a/src/app/components/sections/as-languages/styles/as-languages.component.scss
+++ b/src/app/components/sections/as-languages/styles/as-languages.component.scss
@@ -27,7 +27,9 @@
       justify-content: space-between;
       border-bottom-width: 1px;
       border-bottom-style: solid;
-      padding: 5% 3%;
+      height: 7%;
+      min-height: 50px;
+      padding: 0 3%;
 
       label {
         font-size: 15px;
