--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,8 @@ $font_0: Roboto;
 $font_1: Arial;
 $font_2: sans-serif;
 
+$font_size: 16px;
+
 * {
   box-sizing: border-box;
 	font-family: $font_0, $font_1, $font_2;
