--- a/src/app/components/as-tour-list/styles/as-tour-list.component.scss
+++ b/src/app/components/as-tour-list/styles/as-tour-list.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/built-in-tags.scss';
+
 :host {
   max-width: 1000px;
   width: 100%;
@@ -15,9 +17,28 @@
   &::before {
     content: "";
     position: absolute;
+    z-index: 1;
     width: 100%;
     height: 100%;
     opacity: .3;
+  }
+
+  .background-images {
+    position: relative;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    .background-image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      img {
+        height: 100%;
+        width: 100%;
+      }
+    }
   }
 
   .info {
