--- a/src/app/components/sections/as-gallery/as-gallery.component.html
+++ b/src/app/components/sections/as-gallery/as-gallery.component.html
@@ -1,13 +1,13 @@
 <section class="wrapper {{Tour.color}}">
   <ul class="items">
-    <ng-container *ngIf="Tour.imagesSignatures.length === 0">
+    <ng-container *ngIf="Tour.images.length === 0">
       <li class="item">
         <span>{{ translationsService.translate('No images available') }}</span>
       </li>
     </ng-container>
-    <ng-container *ngFor="let path of Tour.imagesSignatures">
+    <ng-container *ngFor="let image of Tour.images">
       <li class="item">
-        <img src="{{path}}">
+        <img src="{{image.src}}">
       </li>
     </ng-container>
   </ul>
