--- a/src/app/components/sections/as-action/as-action.component.html
+++ b/src/app/components/sections/as-action/as-action.component.html
@@ -24,5 +24,5 @@
   <as-languages [color]="colors.DARK"></as-languages>
 </ng-template>
 <ng-template #people>
-  <!-- <as-people [people]="people"></as-people> -->
+  <as-about-us [color]="colors.DARK"></as-about-us>
 </ng-template>
