Feat: #40 - Implemented first draft for profile page

--- a/src/app/components/sections/as-about-us/as-about-us.component.html
+++ b/src/app/components/sections/as-about-us/as-about-us.component.html
@@ -3,6 +3,8 @@
     <as-combobox [items]="items" (OnItemChange)="onItemChange($event)"></as-combobox>
   </div>
   <div class="profile">
-    <as-profile [profile]="profiles[0]"></as-profile>
+    <ng-container *ngIf="profile">
+      <as-profile [profile]="profile"></as-profile>
+    </ng-container>
   </div>
 </section>
