--- a/src/app/components/sections/as-about-us/as-profile/styles/as-profile.component.scss
+++ b/src/app/components/sections/as-about-us/as-profile/styles/as-profile.component.scss
@@ -7,8 +7,53 @@
 
 .wrapper {
     height: 100%;
+    padding: 0 5%;
     border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+    .header {
+      width: 100%;
+      padding: 5% 0%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+      border-bottom-width: 1px;
+      border-bottom-style: solid;
+
+      .profile-pic{
+        max-width: 300px;
+        width: 50%;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        background-color: #303030;
+      }
+
+      .name {
+        font-weight: bold;
+      }
+
+      .contacts {
+        ul {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: center;
+          flex-wrap: wrap;
+          gap: 15px;
+
+          li {
+            a {
+              .contact-logo {
+                min-height: 45px;
+                aspect-ratio: 1;
+                background-color: #303030;
+                border-radius: 50%;
+              }
+            }
+          }
+        }
+      }
+    }
 }
