Feat: #46 - Added profile descriptions first draft

--- a/src/app/components/sections/as-about-us/as-profile/as-profile.component.html
+++ b/src/app/components/sections/as-about-us/as-profile/as-profile.component.html
@@ -20,6 +20,14 @@
         </ul>
       </div>
     </div>
-    <span> {{ profile.name}}</span>
+    <section class="body">
+      <ul class="paragraphs">
+        <ng-container *ngFor="let paragraph of profile.paragraphs">
+          <li class="paragraph">
+            <p class="text">{{ paragraph.text }}</p>
+          </li>
+        </ng-container>
+      </ul>
+    </section>
   </section>
 </ng-container>
