--- a/src/app/components/sections/as-about-us/as-profile/styles/as-profile.component.scss
+++ b/src/app/components/sections/as-about-us/as-profile/styles/as-profile.component.scss
@@ -10,7 +10,8 @@
     padding: 0 5%;
     border-radius: 5px;
 
-    .header {
+    .header,
+    .body {
       width: 100%;
       padding: 5% 0%;
       display: flex;
@@ -18,42 +19,58 @@
       align-items: center;
       justify-content: center;
       gap: 15px;
-      border-bottom-width: 1px;
-      border-bottom-style: solid;
 
-      .profile-pic{
-        max-width: 300px;
-        width: 50%;
-        aspect-ratio: 1;
-        border-radius: 50%;
-        background-color: #303030;
-      }
+      &.header {
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
 
-      .name {
-        font-weight: bold;
-      }
+        .profile-pic{
+          max-width: 300px;
+          width: 50%;
+          aspect-ratio: 1;
+          border-radius: 50%;
+          background-color: #303030;
+        }
 
-      .contacts {
-        ul {
-          width: 100%;
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          justify-content: center;
-          flex-wrap: wrap;
-          gap: 15px;
+        .name {
+          font-weight: bold;
+        }
 
-          li {
-            a {
-              .contact-logo {
-                min-height: 55px;
-                aspect-ratio: 1;
-                background-color: #303030;
-                border-radius: 50%;
+        .contacts {
+          ul {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 15px;
+
+            li {
+              a {
+                .contact-logo {
+                  min-height: 55px;
+                  aspect-ratio: 1;
+                  background-color: #303030;
+                  border-radius: 50%;
+                }
               }
             }
           }
         }
       }
+
+      &.body {
+        .paragraphs {
+          .paragraph {
+            text-align: center;
+
+            .text {
+
+            }
+          }
+        }
+      }
     }
+
 }
