--- a/src/app/components/as-main/styles/as-main.component.scss
+++ b/src/app/components/as-main/styles/as-main.component.scss
@@ -8,6 +8,8 @@ section {
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: #383838;
+
   as-navbar {
     position: sticky;
     top: 0;
