--- a/src/app/components/sections/as-about-us/as-profile/styles/as-profile.component.scss
+++ b/src/app/components/sections/as-about-us/as-profile/styles/as-profile.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   display: block;
+  height: 100%;
 }
 
 .wrapper {
@@ -24,7 +25,7 @@
         border-bottom-style: solid;
 
         .profile-pic{
-          max-width: 300px;
+          max-width: 250px;
           width: 50%;
           aspect-ratio: 1;
           border-radius: 50%;
