--- a/src/app/components/sections/as-about-us/as-profile/styles/as-profile.component.scss
+++ b/src/app/components/sections/as-about-us/as-profile/styles/as-profile.component.scss
@@ -1,12 +1,10 @@
 @import '../../../../../../styles/built-in-tags.scss';
 
 :host {
-  display: block;
-  height: 100%;
 }
 
 .wrapper {
-    height: 100%;
+    flex: 1;
     padding: 0 5%;
     border-radius: 5px;
 
