Feat: #49 - Ordered contacts alphabetically

--- a/src/app/components/shared/as-combobox/styles/as-combobox-dark.component.scss
+++ b/src/app/components/shared/as-combobox/styles/as-combobox-dark.component.scss
@@ -16,6 +16,10 @@
         .item {
           border-bottom-color: $color_d;
 
+          &:not(.selected):hover {
+            background-color: #202020;
+          }
+
           &.selected {
             background-color: $color_fuchsia_pink_approx;
           }
