Feat: #51 - Modified tours stops, fixed "About us" text

--- a/src/app/components/as-menu/as-menu.component.html
+++ b/src/app/components/as-menu/as-menu.component.html
@@ -10,7 +10,7 @@
     <div class="action-container">
       <button (click)="onPeopleOpen()">
         <svg as-people-svg [Color]="colors.LIGHT" stroke-width="2"></svg>
-        <span>{{translationsService.translate('Who we are')}}</span>
+        <span>{{translationsService.translate('About us')}}</span>
       </button>
     </div>
   </section>
